--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/mongoose": "^5.3.5",
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.0"
